# flamme_solver

./: .gitignore  CMakeLists.txt  README.md
include/: const.h  matrix.h  solver.h
matl/: ils.m  newton.m
src/: main.c  matrix.c  solver.c
